--- a/blog.html
+++ b/blog.html
@@ -90,10 +90,10 @@
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-8 col-lg-offset-2">
-					<p><img src="assets/img/user.png" width="50px" height="50px"> <ba>Stanley Stinson</ba></p>
-					<p><bd>January 01, 2014</bd></p>
-					<h4>Believe In Yourself</h4>
-					<p class="bq">"A bird sitting on a tree is never afraid of the branch breaking, because her trust is not in the branch, but in her own wings."</p>
+					<p><img src="assets/img/works/work1.jfif" width="50px" height="50px"> <ba>CodeTrophs</ba></p>
+					<p><bd>December 20, 2020 - Present</bd></p>
+					<h4>Machine Learning Intern</h4>
+					<p class="bq">Currently working on an open source project under CodeTrophs to detect the flare of a research paper.</p>
 				</div>
 
 			</div><!-- /row -->
