--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="blog.html">Work</a></li>
-            <li><a href="about.html">Volunteering</a></li>
+            <li><a href="works.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
             <!-- <li><a href="blog.html">Projects</a></li> -->
-            <li><a href="contact.html">Online Courses</a></li>
+            <!-- <li><a href="course.html">Online Courses</a></li> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,7 +59,7 @@
 				<div class="col-lg-8 col-lg-offset-2 centered">
 					<img src="assets/img/urvashi.png" alt="Urvashi" width="200px" height="200px">
 					<h1>Hi, I am Urvashi!</h1>
-					<p>Hello everybody. I'm Urvashi, a third year Computer Science and Engineering Student. I love exploring new domains. I'm a research enthusiast. My interests include Machine Learning, Deep Learning, Natural Language Processing and Web Development.</p>
+					<p>Hello everybody. I'm Urvashi, a third year Computer Science and Engineering Student at Institute of Technology Nirma University, Ahmedabad, Gujarat. I love exploring new domains. I'm a research enthusiast. My interests include Machine Learning, Deep Learning, Natural Language Processing and Web Development.</p>
 					<p>I'm currently learning competitive programming algorithms. I'm open for collaborations in projects of my interest domains. Feel free to contact me <a href="mailto: urvashi.ramdasani@gmail.com">by dropping a mail.</a></p>
 				
 				</div><!-- /col-lg-8 -->
@@ -123,7 +123,8 @@
 					<p>
 						<a href="https://www.instagram.com/urvashi.ramdasani/" target="blank">Instagram</a><br/>
 						<a href="https://twitter.com/URamdasani" target="blank">Twitter</a><br/>
-						<a href="https://www.linkedin.com/in/urvashi-ramdasani-91034a175/" target="blank">LinkedIn</a>
+						<a href="https://www.linkedin.com/in/urvashi-ramdasani-91034a175/" target="blank">LinkedIn</a><br>
+						<a href="https://in.pinterest.com/uramdasani/my-creations/" target="blank">Pinterest</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
