--- a/works.html
+++ b/works.html
@@ -41,10 +41,10 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="blog.html">Work</a></li>
-            <li><a href="about.html">Volunteering</a></li>
+            <li><a href="works.html">Work</a></li>
+            <li><a href="about.html">About</a></li>
             <!-- <li><a href="blog.html">Blog</a></li> -->
-            <li><a href="contact.html">Online Courses</a></li>
+            <!-- <li><a href="course.html">Online Courses</a></li> -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -95,40 +95,64 @@
 					<h4>Machine Learning Intern</h4>
 					<p class="bq">Currently working on an open source project under CodeTrophs to detect the flare of a research paper.</p>
 				</div>
-
 			</div><!-- /row -->
 	    </div> <!-- /container -->
 	</div><!-- /grey -->
 	
-	
+	<div id="grey">
+	    <div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<p><img src="assets/img/works/work2.jfif" width="50px" height="50px"> <ba>Script Winter of Code (SWOC)</ba></p>
+					<p><bd>December 20, 2020 - Present</bd></p>
+					<h4>Participant</h4>
+					<p class="bq">Associated with SWOC to work on an open source project named _qp-generator under Team Tomato.</p>
+				</div>
+			</div><!-- /row -->
+	    </div> <!-- /container -->
+	</div><!-- /grey -->
+
+	<div id="grey">
+	    <div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2">
+					<p><img src="assets/img/works/work3.png" width="50px" height="50px"> <ba>Iniesta Webtech Solution</ba></p>
+					<p><bd>July 18, 2020 - September 18, 2020</bd></p>
+					<h4>Web Development Intern</h4>
+					<p class="bq">Worked as a web developer to make a matrimonial website.</p>
+				</div>
+			</div><!-- /row -->
+	    </div> <!-- /container -->
+	</div><!-- /grey -->
 	
 	<!-- +++++ Footer Section +++++ -->
 	
 	<div id="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-lg-6">
 					<h4>My Bunker</h4>
 					<p>
-						Some Address 987,<br/>
-						+34 9054 5455, <br/>
-						Madrid, Spain.
+						Plot number 138,<br/>
+						Ward 9 AE, <br/>
+						Gandhidham, Gujarat.
 					</p>
 				</div><!-- /col-lg-4 -->
 				
-				<div class="col-lg-4">
+				<div class="col-lg-6">
 					<h4>My Links</h4>
 					<p>
-						<a href="#">Dribbble</a><br/>
-						<a href="#">Twitter</a><br/>
-						<a href="#">Facebook</a>
+						<a href="https://www.instagram.com/urvashi.ramdasani/" target="blank">Instagram</a><br/>
+						<a href="https://twitter.com/URamdasani" target="blank">Twitter</a><br/>
+						<a href="https://www.linkedin.com/in/urvashi-ramdasani-91034a175/" target="blank">LinkedIn</a><br>
+						<a href="https://in.pinterest.com/uramdasani/my-creations/" target="blank">Pinterest</a>
 					</p>
 				</div><!-- /col-lg-4 -->
 				
-				<div class="col-lg-4">
+				<!-- <div class="col-lg-4">
 					<h4>About Stanley</h4>
 					<p>This cute theme was created to showcase your work in a simple way. Use it wisely.</p>
-				</div><!-- /col-lg-4 -->
+				</div> --><!-- /col-lg-4 -->
 			
 			</div>
 		
