--- a/index.html
+++ b/index.html
@@ -12,7 +12,31 @@
 </head>
 <body class="main-content">
     <header class="section sec1 header active" id="home">
-
+        <div class="header-content">
+            <div class="left-header">
+                <div class="h-shape"></div>
+                <div class="image">
+                    <img src="img/hero.png" alt="">
+                </div>
+            </div>
+            <div class="right-header">
+                <h1 class="name">
+                    Hi, I'm <span class="name">Urvashi Ramdasani.</span>
+                    A Data Engineer
+                </h1>
+                <p>
+                    Working in the field of data for 2 years, I specialize designing scalable data pipelines,
+                    optimizing ETL processes, and transforming raw data into actionable insights. Looking forward
+                    to connecting with like-minded professionals in the data engineering community.
+                </p>
+                <div class="btn-con">
+                    <a href="" class="main-btn">
+                        <span class="btn-text">Download Resume</span>
+                        <span class="btn-icon"><i class="fas fa-download"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <section class="section sec2 about" id="about"></section>
