--- a/index.html
+++ b/index.html
@@ -39,7 +39,153 @@
         </div>
     </header>
     <main>
-        <section class="section sec2 about" id="about"></section>
+        <section class="section sec2 about" id="about">
+            <div class="main-title">
+                <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+            </div>
+            <div class="about-container">
+                <div class="left-about">
+                    <!-- <h4>Information About Me</h4> -->
+                    <p>
+                        I am a Data Engineer working with Walmart Global Tech India, Bengaluru for 2 years. 
+                        From the beginning of my career, I got to work with highly experienced talented people, 
+                        that piqued my interest in the field of Data Engineering. As a result, I am looking for more 
+                        opportunities in Data Engineering. Please feel free to reach out to me if you think I am a good fit!
+                    </p>
+                    <div class="btn-con">
+                        <a href="" class="main-btn">
+                            <span class="btn-text">Download Resume</span>
+                            <span class="btn-icon"><i class="fas fa-download"></i></span>
+                        </a>
+                    </div>
+                </div>
+                <div class="right-about">
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">2+</p>
+                            <p class="small-text">Years Of <br /> Experience</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">8+</p>
+                            <p class="small-text">Projects <br /> Completed</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">2+</p>
+                            <p class="small-text">Papers <br /> Published</p>
+                        </div>
+                    </div>
+                    <div class="about-item">
+                        <div class="abt-text">
+                            <p class="large-text">2+</p>
+                            <p class="small-text">Years Of <br /> Volunteering</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="about-stats">
+                <h4 class="stat-title">My Skills</h4>
+                <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title">Apache Spark</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="spark"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Java</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="java"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Python</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="python"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Apache Airflow</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="airflow"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Big Query</p>
+                        <div class="progress-con">
+                            <p class="prog-text">85%</p>
+                            <div class="progress">
+                                <span class="big-query"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">Docker</p>
+                        <div class="progress-con">
+                            <p class="prog-text">80%</p>
+                            <div class="progress">
+                                <span class="docker"></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <h4 class="stat-title">My Timeline</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">Jun 2022 - Present</p>
+                    <h5>Data Engineer<span> - Walmart Global Tech India</span></h5>
+                    <p>
+                        Built and currently maintaining ETL pipelines to solve one of Walmart's Business Problems.
+                        Actively collaborating with Data Scientists and Product Managers to execute tasks efficiently.
+                        <b>Two time Bravo Award Winner</b> (Walmart's Prestigious Award) for Engineering Excellence and Innovation.  
+                        Constantly ensuring that data is accurate, accessible and secure.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">Jan 2022 - May 2022</p>
+                    <h5>Software Engineer Intern<span> - Crest Data Systems</span></h5>
+                    <p>
+                        Utilized Splunk to monitor system logs, detect anomalies, and analyze data trends for a client application. 
+                        Created basic dashboards and visualizations to provide insights to team members and stakeholders.
+                        Participated in training and self-study to improve Splunk skills and stay updated with best practices.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">Dec 2020 - Feb 2020</p>
+                    <h5>Machine Learning Intern<span> - CodeTrophs</span></h5>
+                    <p>
+                        Gathered, cleaned, and prepared data from multiple sources using Web Scraping. 
+                        Developed an automated script to download the PDF of a freely available research paper 
+                        for making a research paper dataset. Trained a model that used the title of the research paper to predict its genre.
+                    </p>
+                </div>
+            </div>
+        </section>
         <section class="section sec3 portfolio" id="portfolio"></section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
