--- a/index.html
+++ b/index.html
@@ -186,7 +186,134 @@
                 </div>
             </div>
         </section>
-        <section class="section sec3 portfolio" id="portfolio"></section>
+        <section class="section sec3 portfolio" id="portfolio">
+            <div class="main-title">
+                <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
+            </div>
+            <p class="port-text">
+                Here are some of the projects that I've built over the years!
+            </p>
+            <div class="portfolios">
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/todo.png" alt="">
+                        <h3>To-Do List Using React</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/react-to-do-list.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://react-to-do-list-three-chi.vercel.app/" target="_blank" class="icon">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/reddit.jpg" alt="">
+                        <h3>Reddit Flare Detection</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/reddit-flare-detection.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/tic.png" alt="">
+                        <h3>Tic Tac Toe Using React</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/tic-tac-toe.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://tic-tac-toe-liart-alpha.vercel.app/" target="_blank" class="icon">
+                                <i class="fas fa-globe"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/confusion.png" alt="">
+                        <h3>conFusion</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/conFusion.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/terminal.png" alt="">
+                        <h3>Admission System Using Java</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/java-admission-system.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/yelpcamp.png" alt="">
+                        <h3>YelpCamp</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/yelpcamp.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/hand.png" alt="">
+                        <h3>Handwritten Digit Recognition</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/handwritten-digit-recognition.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/calculator.jpg" alt="">
+                        <h3>Calculator App</h3>
+                    </div>
+                    <div class="hover-item">
+                        <h3>Project Source</h3>
+                        <div class="icons">
+                            <a href="https://github.com/urvashiramdasani/calculator-app.git" target="_blank" class="icon">
+                                <i class="fab fa-github"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="section sec4 blogs" id="blogs"></section>
         <section class="section sec5 contact" id="contact"></section>
     </main>
