Contact section and theme

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <img src="img/hero.png" alt="">
+                    <img src="img/Urvashi Ramdasani.jpg" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -80,8 +80,8 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">2+</p>
-                            <p class="small-text">Years Of <br /> Volunteering</p>
+                            <p class="large-text">300+</p>
+                            <p class="small-text">Reads On <br /> ResearchGate</p>
                         </div>
                     </div>
                 </div>
@@ -314,8 +314,79 @@
                 </div>
             </div>
         </section>
-        <section class="section sec4 blogs" id="blogs"></section>
-        <section class="section sec5 contact" id="contact"></section>
+        <section class="section sec5 contact" id="contact">
+            <div class="contact-container">
+                <div class="main-title">
+                    <h2>Contact <span>Me</span><span class="bg-text"></span></h2>
+                </div>
+                <div class="contact-content-con">
+                    <div class="left-contact">
+                        <h4>Contact me here</h4>
+                        <p></p>
+                        <div class="contact-info">
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <span>Location</span>
+                                </div>
+                                <p>
+                                    <span>: Bengaluru, Karnataka</span>
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-envelope"></i>
+                                    <span>Email</span>
+                                </div>
+                                <p>
+                                    <span>: ramdasaniurvashi@gmail.com</span>
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-user-graduate"></i>
+                                    <span>Education</span>
+                                </div>
+                                <p>
+                                    <span>: Nirma University, Ahmedabad</span>
+                                </p>
+                            </div>
+                            <div class="contact-item">
+                                <div class="icon">
+                                    <i class="fas fa-globe-africa"></i>
+                                    <span>Languages</span>
+                                </div>
+                                <p>
+                                    <span>: English, Hindi, French</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="contact-icons">
+                            <div class="contact-icon">
+                                <a href="https://www.linkedin.com/in/urvashi-ramdasani-91034a175/" target="_blank">
+                                    <i class="fab fa-linkedin"></i>
+                                </a>
+                                <a href="https://twitter.com/URamdasani" target="_blank">
+                                    <i class="fab fa-twitter-square"></i>
+                                </a>
+                                <a href="https://www.researchgate.net/profile/Urvashi_Ramdasani" target="_blank">
+                                    <i class="fab fa-researchgate"></i>
+                                </a>
+                                <a href="https://leetcode.com/u/urvashi-ramdasani/" target="_blank">
+                                    <i class="fas fa-code"></i>
+                                </a>
+                                <a href="https://github.com/urvashiramdasani" target="_blank">
+                                    <i class="fab fa-github"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-contact">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <div class="controls">
@@ -328,12 +399,13 @@
         <div class="control control-3" data-id="portfolio">
             <i class="fas fa-briefcase"></i>
         </div>
-        <div class="control control-4" data-id="blogs">
-            <i class="far fa-newspaper"></i>
-        </div>
         <div class="control control-5" data-id="contact">
             <i class="fas fa-envelope-open"></i>
         </div>
+    </div>
+
+    <div class="theme-btn">
+        <i class="fas fa-adjust"></i>
     </div>
 
     <script src="app.js"></script>
