--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     to connecting with like-minded professionals in the data engineering community.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="assets/Urvashi_Ramdasani_Resume.pdf" download class="main-btn">
                         <span class="btn-text">Download Resume</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -53,7 +53,7 @@
                         opportunities in Data Engineering. Please feel free to reach out to me if you think I am a good fit!
                     </p>
                     <div class="btn-con">
-                        <a href="" class="main-btn">
+                        <a href="assets/Urvashi_Ramdasani_Resume.pdf" download class="main-btn">
                             <span class="btn-text">Download Resume</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
