--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Reads On <br /> ResearchGate</p>
+                            <p class="large-text">450+</p>
+                            <p class="small-text">Full Text <br /> Views</p>
                         </div>
                     </div>
                 </div>
@@ -313,6 +313,52 @@
                     </div>
                 </div>
             </div>
+            <h4 class="stat-title">My Publications</h4>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">May 30, 2022</p>
+                    <h5>
+                        <a href="https://ieeexplore.ieee.org/document/9824216" target="_blank">
+                            DuBloQ: Blockchain and Q-Learning Based Drug Discovery in Healthcare 4.0<span> - IEEE</span>
+                        </a>
+                    </h5>
+                    <p>
+                        Drug Discovery is a process by which new potential drugs are discovered and clinically trialed for commercial medicinal purposes. 
+                        It has several stages of development, where each stage requires a prescribed time for its completion. 
+                        The stages of drug development are discovery and development, pre-clinical research, clinical development, Food and Drug Administration (FDA) review, and post-market monitoring. 
+                        The first three stages themselves take nearly 6.5 years. These stages take a huge time in cases where there is an urgent need for a drug. 
+                        For example, during the COVID-19 pandemic, there was an urgent need for a vaccine. Many research institutes worked 24×7 to develop a vaccine, but it still took a considerable time to get to a bare minimum vaccine. 
+                        To tackle this problem, we propose DuBloQ, a novel methodology for drug discovery using Q-Learning. Our Q-Learning model consists of a generator and a predictor model. 
+                        The generator generates a set of Simplified Molecular Input Line Entry System (SMILES) strings and the Predictor predicts its logp values. Based on the logp values, the reward for the generator is provided to improve its performance. 
+                        We integrate this model with a blockchain User Interface (UI) that ensures security and privacy. We achieved an accuracy of 76.1% for the generator model.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">Aug 6, 2021</p>
+                    <h5>
+                        <a href="https://ieeexplore.ieee.org/document/9500499" target="_blank">
+                            BCovX: Blockchain-based COVID Diagnosis Scheme using Chest X-Ray for Isolated Location<span> - IEEE</span>
+                        </a>
+                    </h5>
+                    <p>
+                        The COVID-19 pandemic has adversely affected the lives of millions of people worldwide. 
+                        With an alarming increase in COVID-19 cases, it is important to detect and diagnose COVID-19 in its early stages to prevent its spread. 
+                        To diagnose remote patients, the Internet can be useful for accessing data of that patient. But, the Internet has also had issues related to data security, reliability, and privacy. 
+                        Motivated by these challenges, in this paper, we propose a Blockchain (BC) based COVID-19 detection scheme (BCovX) for fast and reliable diagnosis of COVID-19 using chest X-Ray (CXR) images. 
+                        For fast and accurate detection of COVID-19 using CXR, BCovX consists of a Convolutional Neural Network (CNN) model, using which a patient can be diagnosed for COVID-19 remotely. 
+                        CNNs have performed successfully in medical imaging classification. BCovX provides reliable and secure data access and exchange using BC and smart contracts (SC). 
+                        To solve issues related to data storage and its associated cost, the InterPlanetary File System (IPFS) protocol is used to store medical data.
+                        We also present a real-time SC developed in Solidity to govern the transaction between the patient and the doctor. The SC has been compiled and deployed on Remix Integrated Development Environment (IDE). 
+                        Finally, we have evaluated the performance of BCovX with traditional schemes in terms of storage cost, bandwidth requirements, and accuracy of the CNN model.
+                    </p>
+                </div>
+            </div>
         </section>
         <section class="section sec5 contact" id="contact">
             <div class="contact-container">
@@ -330,7 +376,9 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    <span>: Bengaluru, Karnataka</span>
+                                    <a href="https://maps.app.goo.gl/cc5ibm6jAiXmRFp17" target="_blank">
+                                        <span>: Bengaluru, Karnataka</span>
+                                    </a>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -339,7 +387,9 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <span>: ramdasaniurvashi@gmail.com</span>
+                                    <a href="mailto:ramdasaniurvashi@gmail.com" target="_blank">
+                                        <span>: ramdasaniurvashi@gmail.com</span>
+                                    </a>
                                 </p>
                             </div>
                             <div class="contact-item">
@@ -348,7 +398,9 @@
                                     <span>Education</span>
                                 </div>
                                 <p>
-                                    <span>: Nirma University, Ahmedabad</span>
+                                    <a href="https://nirmauni.ac.in/" target="_blank">
+                                        <span>: Nirma University, Ahmedabad</span>
+                                    </a>
                                 </p>
                             </div>
                             <div class="contact-item">
