--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span class="name">Urvashi Ramdasani.</span>
-                    A Data Engineer
+                    A Software Engineer
                 </h1>
                 <p>
-                    Working in the field of data for 3 years, I specialize designing scalable data pipelines,
-                    optimizing ETL processes, and transforming raw data into actionable insights. Looking forward
-                    to connecting with like-minded professionals in the data engineering community.
+                    Working in the field of software for 3.5+ years, I like building systems that stay fast and reliable as they scale. Looking forward
+                    to connecting with like-minded professionals in the software engineering community.
                 </p>
                 <div class="btn-con">
                     <a href="assets/Urvashi_Ramdasani_Resume.pdf" download class="main-btn">
@@ -47,9 +46,9 @@
                 <div class="left-about">
                     <!-- <h4>Information About Me</h4> -->
                     <p>
-                        I am a Data Engineer working with Walmart Global Tech India, Bengaluru for 3 years. 
+                        I am a Software Development Engineer working with Walmart Global Tech India, Bengaluru for 3.5+ years. 
                         From the beginning of my career, I got to work with highly experienced talented people, 
-                        that piqued my interest in the field of Data Engineering. As a result, I am looking for more 
+                        that piqued my interest in the field of Backend and Data. As a result, I am looking for more 
                         opportunities in Data Engineering. Please feel free to reach out to me if you think I am a good fit!
                     </p>
                     <div class="btn-con">
@@ -89,6 +88,33 @@
             <div class="about-stats">
                 <h4 class="stat-title">My Skills</h4>
                 <div class="progress-bars">
+                    <div class="progress-bar">
+                        <p class="prog-title">Spring Boot</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="spring"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">FastAPI</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="fastapi"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
+                        <p class="prog-title">LangGraph</p>
+                        <div class="progress-con">
+                            <p class="prog-text">50%</p>
+                            <div class="progress">
+                                <span class="langgraph"></span>
+                            </div>
+                        </div>
+                    </div>
                     <div class="progress-bar">
                         <p class="prog-title">Apache Spark</p>
                         <div class="progress-con">
@@ -135,6 +161,15 @@
                         </div>
                     </div>
                     <div class="progress-bar">
+                        <p class="prog-title">PostgreSQL</p>
+                        <div class="progress-con">
+                            <p class="prog-text">70%</p>
+                            <div class="progress">
+                                <span class="postgres"></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar">
                         <p class="prog-title">Docker</p>
                         <div class="progress-con">
                             <p class="prog-text">80%</p>
@@ -151,13 +186,27 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">Jun 2022 - Present</p>
-                    <h5>Data Engineer<span> - Walmart Global Tech India</span></h5>
+                    <p class="tl-duration">Sep 2024 - Present</p>
+                    <h5>Software Development Engineer III<span> - Walmart Global Tech India</span></h5>
                     <p>
-                        Built and currently maintaining ETL pipelines to solve one of Walmart's Business Problems.
-                        Actively collaborating with Data Scientists and Product Managers to execute tasks efficiently.
-                        <b>Two time Bravo Award Winner</b> (Walmart's Prestigious Award) for Engineering Excellence and Innovation.  
-                        Constantly ensuring that data is accurate, accessible and secure.
+                        Designing and building backend services and autonomous agentic workflows for internal platforms.
+                        Led the development of a hierarchical multi-agent orchestrator using <b>FastAPI</b>, <b>LangGraph</b>, and <b>PostgreSQL</b>,
+                        along with an automated LLM evaluation framework to benchmark agent performance.
+                        Built real-time monitoring services and high-performance REST APIs with pagination, filtering and distributed caching,
+                        improving operational visibility and keeping response times under <b>50ms</b>.
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <p class="tl-duration">Jun 2022 - Sep 2024</p>
+                    <h5>Software Development Engineer II<span> - Walmart Global Tech India</span></h5>
+                    <p>
+                        Built and maintained <b>Spark</b>- and <b>Airflow</b>-based ETL pipelines and reporting flows powering key business decisions,
+                        optimising partitioning and memory to cut job runtimes by <b>50%</b> and reduce cloud compute costs.
+                        Collaborated closely with Data Scientists and Product Managers, ensuring data was accurate, available and met strict SLAs.
+                        <b>Two-time Bravo Award winner</b> for engineering excellence and innovation in data platforms.
                     </p>
                 </div>
                 <div class="timeline-item">
@@ -387,8 +436,8 @@
                                     <span>Email</span>
                                 </div>
                                 <p>
-                                    <a href="mailto:ramdasaniurvashi@gmail.com" target="_blank">
-                                        <span>: ramdasaniurvashi@gmail.com</span>
+                                    <a href="mailto:urvashi.ramdasani@gmail.com" target="_blank">
+                                        <span>: urvashi.ramdasani@gmail.com</span>
                                     </a>
                                 </p>
                             </div>
